// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control component matches the snapshot 1`] = `
<Control
  isScored={false}
  onMenu={[Function]}
  onSubmit={[Function]}
  scoreText=""
  statusText=""
  timerString=""
  tried={Object {}}
  words={Object {}}
  wordsToNextLevel={0}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <react-native-mock>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <react-native-mock>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 4,
                "flex": 4,
                "marginBottom": 10,
                "marginTop": 10,
                "overflow": "hidden",
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#b3c9d0",
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Text
                    style={
                      Object {
                        "color": "#444",
                        "fontFamily": "RujisHandwritingFontv.2.0",
                        "fontSize": 15,
                        "margin": 5,
                      }
                    }
                  >
                    <react-native-mock>
                      0 / 0
                    </react-native-mock>
                  </Text>
                </react-native-mock>
              </View>
              <ListView
                dataSource={
                  ListViewDataSource {
                    "_dataBlob": Array [
                      Object {
                        "style": "neutral",
                        "word": "No words",
                      },
                    ],
                  }
                }
                enableEmptySections={true}
                renderRow={[Function]}
                renderScrollComponent={[Function]}
                style={
                  Object {
                    "marginBottom": 10,
                    "marginLeft": 10,
                  }
                }
              >
                <react-native-mock />
              </ListView>
            </react-native-mock>
          </View>
          <View
            style={
              Object {
                "flex": 6,
                "marginBottom": 10,
                "marginLeft": 10,
                "marginTop": 10,
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Text
                    style={
                      Object {
                        "color": "#444",
                        "fontFamily": "RujisHandwritingFontv.2.0",
                        "fontSize": 20,
                      }
                    }
                  >
                    <react-native-mock />
                  </Text>
                </react-native-mock>
              </View>
              <View>
                <react-native-mock>
                  <Button
                    colour="blue"
                    onPress={[Function]}
                    title="Submit"
                  >
                    <TouchableWithoutFeedback
                      onPress={[Function]}
                      onPressIn={[Function]}
                      onPressOut={[Function]}
                      style={
                        Object {
                          "height": "auto",
                          "width": 200,
                        }
                      }
                    >
                      <react-native-mock>
                        <ImageBackground
                          source={
                            Object {
                              "testUri": "src/images/buttonBluePassive.png",
                            }
                          }
                          style={
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "height": undefined,
                              "justifyContent": "center",
                              "paddingBottom": 2,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 8,
                              "width": undefined,
                            }
                          }
                        >
                          <react-native-mock>
                            <View
                              pointerEvents="none"
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 20,
                                      "marginBottom": 15,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    SUBMIT
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </ImageBackground>
                      </react-native-mock>
                    </TouchableWithoutFeedback>
                  </Button>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 2,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <View>
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#227711",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 30,
                            "textAlign": "center",
                          }
                        }
                      >
                        <react-native-mock>
                           
                        </react-native-mock>
                      </Text>
                    </react-native-mock>
                  </View>
                  <View>
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 16,
                            "textAlign": "center",
                          }
                        }
                      >
                        <react-native-mock />
                      </Text>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
              <View>
                <react-native-mock>
                  <Button
                    colour="yellow"
                    onPress={[Function]}
                    title="Menu"
                  >
                    <TouchableWithoutFeedback
                      onPress={[Function]}
                      onPressIn={[Function]}
                      onPressOut={[Function]}
                      style={
                        Object {
                          "height": "auto",
                          "width": 200,
                        }
                      }
                    >
                      <react-native-mock>
                        <ImageBackground
                          source={
                            Object {
                              "testUri": "src/images/buttonYellowPassive.png",
                            }
                          }
                          style={
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "height": undefined,
                              "justifyContent": "center",
                              "paddingBottom": 2,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 8,
                              "width": undefined,
                            }
                          }
                        >
                          <react-native-mock>
                            <View
                              pointerEvents="none"
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 20,
                                      "marginBottom": 15,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    MENU
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </ImageBackground>
                      </react-native-mock>
                    </TouchableWithoutFeedback>
                  </Button>
                </react-native-mock>
              </View>
            </react-native-mock>
          </View>
        </react-native-mock>
      </View>
    </react-native-mock>
  </View>
</Control>
`;

exports[`Control component matches the snapshot 2`] = `
<Control
  isScored={true}
  onMenu={[Function]}
  onSubmit={[Function]}
  scoreText="Nice!"
  selectedLetters="akdc"
  statusText="Game scored."
  timerString="1m 20s"
  tried={
    Object {
      "alit": true,
      "asdf": false,
      "bail": true,
      "built": true,
      "yrasd": false,
    }
  }
  words={
    Object {
      "alit": true,
      "bail": true,
      "built": true,
      "hail": true,
      "halt": true,
      "haul": true,
      "tail": true,
    }
  }
  wordsToNextLevel={5}
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <react-native-mock>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <react-native-mock>
          <View
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 4,
                "flex": 4,
                "marginBottom": 10,
                "marginTop": 10,
                "overflow": "hidden",
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#b3c9d0",
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Text
                    style={
                      Object {
                        "color": "#444",
                        "fontFamily": "RujisHandwritingFontv.2.0",
                        "fontSize": 15,
                        "margin": 5,
                      }
                    }
                  >
                    <react-native-mock>
                      3 / 7
                    </react-native-mock>
                  </Text>
                </react-native-mock>
              </View>
              <ListView
                dataSource={
                  ListViewDataSource {
                    "_dataBlob": Array [
                      Object {
                        "style": "neutral",
                        "word": "Not found:",
                      },
                      Object {
                        "style": "neutral",
                        "word": "hail",
                      },
                      Object {
                        "style": "neutral",
                        "word": "halt",
                      },
                      Object {
                        "style": "neutral",
                        "word": "haul",
                      },
                      Object {
                        "style": "neutral",
                        "word": "tail",
                      },
                      Object {
                        "style": "neutral",
                        "word": " ",
                      },
                      Object {
                        "style": "neutral",
                        "word": "Your words:",
                      },
                      Object {
                        "style": "correct",
                        "word": "alit",
                      },
                      Object {
                        "style": "incorrect",
                        "word": "asdf",
                      },
                      Object {
                        "style": "correct",
                        "word": "bail",
                      },
                      Object {
                        "style": "correct",
                        "word": "built",
                      },
                      Object {
                        "style": "incorrect",
                        "word": "yrasd",
                      },
                    ],
                  }
                }
                enableEmptySections={true}
                renderRow={[Function]}
                renderScrollComponent={[Function]}
                style={
                  Object {
                    "marginBottom": 10,
                    "marginLeft": 10,
                  }
                }
              >
                <react-native-mock />
              </ListView>
            </react-native-mock>
          </View>
          <View
            style={
              Object {
                "flex": 6,
                "marginBottom": 10,
                "marginLeft": 10,
                "marginTop": 10,
              }
            }
          >
            <react-native-mock>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Text
                    style={
                      Object {
                        "color": "#444",
                        "fontFamily": "RujisHandwritingFontv.2.0",
                        "fontSize": 20,
                      }
                    }
                  >
                    <react-native-mock>
                      Game scored.
                    </react-native-mock>
                  </Text>
                </react-native-mock>
              </View>
              <View>
                <react-native-mock>
                  <Button
                    colour="blue"
                    onPress={[Function]}
                    title="Submit"
                  >
                    <TouchableWithoutFeedback
                      onPress={[Function]}
                      onPressIn={[Function]}
                      onPressOut={[Function]}
                      style={
                        Object {
                          "height": "auto",
                          "width": 200,
                        }
                      }
                    >
                      <react-native-mock>
                        <ImageBackground
                          source={
                            Object {
                              "testUri": "src/images/buttonBluePassive.png",
                            }
                          }
                          style={
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "height": undefined,
                              "justifyContent": "center",
                              "paddingBottom": 2,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 8,
                              "width": undefined,
                            }
                          }
                        >
                          <react-native-mock>
                            <View
                              pointerEvents="none"
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 20,
                                      "marginBottom": 15,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    SUBMIT
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </ImageBackground>
                      </react-native-mock>
                    </TouchableWithoutFeedback>
                  </Button>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <Text
                    style={
                      Object {
                        "color": "#000",
                        "fontFamily": "RujisHandwritingFontv.2.0",
                        "fontSize": 20,
                      }
                    }
                  >
                    <react-native-mock>
                      1m 20s
                    </react-native-mock>
                  </Text>
                </react-native-mock>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 2,
                    "justifyContent": "center",
                  }
                }
              >
                <react-native-mock>
                  <View>
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#227711",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 30,
                            "textAlign": "center",
                          }
                        }
                      >
                        <react-native-mock>
                          Nice!
                        </react-native-mock>
                      </Text>
                    </react-native-mock>
                  </View>
                  <View>
                    <react-native-mock>
                      <Text
                        style={
                          Object {
                            "color": "#000",
                            "fontFamily": "RujisHandwritingFontv.2.0",
                            "fontSize": 16,
                            "textAlign": "center",
                          }
                        }
                      >
                        <react-native-mock>
                          5 words to level up
                        </react-native-mock>
                      </Text>
                    </react-native-mock>
                  </View>
                </react-native-mock>
              </View>
              <View>
                <react-native-mock>
                  <Button
                    colour="yellow"
                    onPress={[Function]}
                    title="Menu"
                  >
                    <TouchableWithoutFeedback
                      onPress={[Function]}
                      onPressIn={[Function]}
                      onPressOut={[Function]}
                      style={
                        Object {
                          "height": "auto",
                          "width": 200,
                        }
                      }
                    >
                      <react-native-mock>
                        <ImageBackground
                          source={
                            Object {
                              "testUri": "src/images/buttonYellowPassive.png",
                            }
                          }
                          style={
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "height": undefined,
                              "justifyContent": "center",
                              "paddingBottom": 2,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 8,
                              "width": undefined,
                            }
                          }
                        >
                          <react-native-mock>
                            <View
                              pointerEvents="none"
                            >
                              <react-native-mock>
                                <Text
                                  style={
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "Grundschrift-Bold",
                                      "fontSize": 20,
                                      "marginBottom": 15,
                                    }
                                  }
                                >
                                  <react-native-mock>
                                    MENU
                                  </react-native-mock>
                                </Text>
                              </react-native-mock>
                            </View>
                          </react-native-mock>
                        </ImageBackground>
                      </react-native-mock>
                    </TouchableWithoutFeedback>
                  </Button>
                </react-native-mock>
              </View>
            </react-native-mock>
          </View>
        </react-native-mock>
      </View>
    </react-native-mock>
  </View>
</Control>
`;
